wip - exposed toggle to ui

--- a/pkg/kubernetes/views/imagestream-modify.html
+++ b/pkg/kubernetes/views/imagestream-modify.html
@@ -81,7 +81,7 @@
                     </div>
                 </td>
             </tr>
-            <tr ng-show="fields.populate == 'tags'">
+            <tr ng-show="fields.populate == 'tags' || fields.populate == 'pull'">
                 <td></td>
                 <td>
                     <label>
